--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
-    "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "quasar": "^2.1.9",
-    "vuex": "^4.0.1"
+    "quasar": "^2.1.9"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
