--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
 
   caddy:
     image: caddy/caddy:latest-alpine
-    container-name: caddy-service
+    container_name: caddy-service
     restart: unless-stopped
     ports:
       - "80:80"
