--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       context: ./
 
   caddy:
-    image: caddy/caddy:latest-alpine
+    image: caddy/caddy:2.4.6-alpine
     container_name: caddy-service
     restart: unless-stopped
     ports:
